# rust_api

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2017-12-23-232712_users/: up.sql
src/: lib.rs  main.rs
src/controller/: user_controller.rs
src/dao/: connection.rs  mod.rs  user_dao.rs
src/model/: user.rs
src/service/: user_service.rs
