[package]
name = "api"
version = "0.1.0"
authors = ["Charles_Uye <charlesdoamin@gmail.com>"]

[dependencies]
nickel = "*"
mongodb = "*"
bson = "*"
rustc-serialize = "*"
dotenv = "0.10.1"
diesel = { version = "1.0.0-rc1", features = ["mysql"] }
diesel_infer_schema = { version = "1.0.0-rc1", features = ["mysql"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "~0.7.1"
r2d2-diesel = "~0.9.0"
lazy_static = "~0.1.0"
